--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.18",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
