--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "fg-loadcss": "^3.1.0",
+    "http-proxy-middleware": "^2.0.4",
     "i": "^0.3.7",
     "npm": "^8.5.5",
     "react": "^17.0.2",
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.9"
   }
 }
