--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "router-example",
+    "name": "quizzlyweb",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -15,6 +15,7 @@
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.1",
+        "bcryptjs": "^2.4.3",
         "fg-loadcss": "^3.1.0",
         "http-proxy-middleware": "^2.0.4",
         "i": "^0.3.7",
