--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-spring": "^9.4.4",
+        "serve": "^13.0.2",
         "socket.io-client": "^4.4.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "dev": "react-scripts start",
+        "start": "serve -s build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
