--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "npm": "^8.5.5",
         "pixi.js": "^6.3.2",
         "react": "^17.0.2",
+        "react-dice-roll": "^1.2.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.30.0",
         "react-img-mapper": "^1.4.0",
